--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/db_transaction?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=123456789
+spring.jpa.hibernate.ddl-auto=update
+server.port=8083
+
+
 
